# tgemma

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  chunk_documents.py  languages.xlsx  noxfile.py  pyproject.toml  slurm-6472033.out  translate.slurm  translate_documents.py
.github/workflows/: ci.yml
output/deepl/: ARG_CGT_2025_presentation.txt  AUT_OGB_2018-06_report.txt  BEL_CSC_2024_report.txt  BRA_UGT_2007-07_statement_of_principles.txt  CZE_ASO_2025_missions.txt  DEU_DGB_2022-05_report.txt  DNK_FH_2023_focus.txt  FIN_STTK_2025_opinions.txt  HUN_MSZSZ_2023_program.txt  ISR_HISTADRUT_2021-10_statutes.txt  ITA_CISL_2022-05_motion.txt  KOR_FCTU_2023-04_statutes.txt  NOR_LO_2022-06_program.txt  POL_NSZZ_1998_program.txt  SVK_KOZ_2023-11_program.txt  SWE_LO_2025-05_motions_12.txt  TUR_DISK_2016-02_declaration.txt
output/translategemma-12b-all/: ARG_CGT_2025_presentation_translated_en.txt  AUT_OGB_2018-06_report_translated_en.txt  BEL_CSC_2024_report_translated_en.txt  BRA_UGT_2007-07_statement_of_principles_translated_en.txt  CZE_ASO_2025_missions_translated_en.txt  DEU_DGB_2022-05_report_translated_en.txt  DNK_FH_2023_focus_translated_en.txt  FIN_STTK_2025_opinions_translated_en.txt  GRC_GSEE_2023-03_statement_translated_en.txt  HUN_MSZSZ_2023_program_translated_en.txt  (+8 more)
sample-docs/: ARG_CGT_2025_presentation.txt  AUT_OGB_2018-06_report.txt  BEL_CSC_2024_report.txt  BRA_UGT_2007-07_statement_of_principles.txt  CZE_ASO_2025_missions.txt  DEU_DGB_2022-05_report.txt  DNK_FH_2023_focus.txt  FIN_STTK_2025_opinions.txt  GRC_GSEE_2023-03_statement.txt  HUN_MSZSZ_2023_program.txt  ISR_HISTADRUT_2021-10_statutes.txt  ITA_CISL_2022-05_motion.txt  KOR_FCTU_2023-04_statutes.txt  NOR_LO_2022-06_program.txt  POL_NSZZ_1998_program.txt  SVK_KOZ_2023-11_program.txt  SWE_LO_2025-05_motions_12.txt  TUR_DISK_2016-02_declaration.txt
sample-docs-1k/: ARG_CGT_2025_presentation.txt  AUT_OGB_2018-06_report.txt  BEL_CSC_2024_report.txt  BRA_UGT_2007-07_statement_of_principles.txt  CZE_ASO_2025_missions.txt  DEU_DGB_2022-05_report.txt  DNK_FH_2023_focus.txt  FIN_STTK_2025_opinions.txt  GRC_GSEE_2023-03_statement.txt  HUN_MSZSZ_2023_program.txt  ISR_HISTADRUT_2021-10_statutes.txt  KOR_FCTU_2023-04_statutes.txt  NOR_LO_2022-06_program.txt  POL_NSZZ_1998_program.txt  SVK_KOZ_2023-11_program.txt  SWE_LO_2025-05_motions_12.txt  TUR_DISK_2016-02_declaration.txt
tests/: __init__.py  test_chunking.py  test_detection.py  test_orchestration.py  test_utils.py
tgemma/: __init__.py  __main__.py  chunking.py  cli.py  detection.py  extraction.py  orchestration.py  translator.py  utils.py
(+36 files in other folders)
