[project]
name = "translation-tool"
version = "0.1.0"
description = "Batch-translate `.txt` documents into English (or another target language) using Google's TranslateGemma models via Ollama or HuggingFace. Supports automatic language detection and token-aware chunking to work within the small, 2048-token context window."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Data-Driven Social Science, Princeton University", email = "ddss@princeton.edu" },
    { name = "Eric Manning", email = "ericmm@princeton.edu" },
]
dependencies = [
    "accelerate>=1.12.0",
    "langdetect>=1.0.9",
    "ollama>=0.6.1",
    "pillow>=12.1.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]